[project]
name = "project_or_module_name"
description = "A_short_description"

# If a project, then you can specify version here
version = "0.0.0"


readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { email = "matthew@davidson.engineering" },
  { name = "Matthew Davidson" },
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "fast-database-clients @ git+https://github.com/generalmattza/fast-database-clients.git@v2.0.5",
  "mqtt-node-network @ git+https://github.com/generalmattza/mqtt-node-network.git",
]

[project.optional-dependencies]
test = ["pytest >= 7.1.1"]

[tool.setuptools]
py-modules = []

# [project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
